--- a/.github/workflows/buildchecks.yml
+++ b/.github/workflows/buildchecks.yml
@@ -28,5 +28,5 @@ jobs:
         node-version: ${{ matrix.node-version }}
     - run: npm ci
     - run: npm test
-    - run: run build
+    - run: npm run build
 
