--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test a --coverage",
+    "test": "react-scripts test a --coverage --verbose",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
