--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "^16.13.1",
     "react-bootstrap": "^1.1.1",
     "react-dom": "^16.13.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1"
   },
   "scripts": {
@@ -35,6 +36,7 @@
   },
   "devDependencies": {
     "@types/jest": "^26.0.4",
+    "@types/react-router-dom": "^5.1.5",
     "source-map-loader": "^1.0.1",
     "ts-jest": "^26.1.2",
     "ts-loader": "^8.0.1",
