--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "^16.13.1",
     "react-bootstrap": "^1.1.1",
     "react-dom": "^16.13.1",
+    "react-redux": "^7.2.1",
     "react-icons": "^3.11.0",
     "react-iframe": "^1.8.0",
     "react-router-dom": "^5.2.0",
